// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineDot should match snapshot when not selected 1`] = `
<div
  class="w-4 h-4 rounded-full border-3 transition-all duration-300 mb-4 bg-stone-50 border-stone-400 group-hover:bg-stone-100 group-hover:scale-110"
/>
`;

exports[`TimelineDot should match snapshot when selected 1`] = `
<div
  class="w-4 h-4 rounded-full border-3 transition-all duration-300 mb-4 bg-stone-950 border-stone-950 scale-125 shadow-lg"
/>
`;
